# dwarfs

./: .gitignore  README.md  adding_stars.ipynb  agama.patch  asya_functions.py  calc_orbits.ipynb  paint_stars.py  param.txt  plot_orbits.ipynb  plot_prof.ipynb  pluto  process_zeno_h5.py  pyproject.toml  pyxel.py  rescale.jl  rescale.py  sort_output.jl  view_last_log.sh
LilGuys/: Manifest.toml  Project.toml  README.md  points.jl
adiabatic/: simple_tests.ipynb
agama/: 1e6  1e6.toml  agama.patch  fits_to_snap.jl  make_core.jl  make_cusp.jl  make_nfw.jl  make_nfw.py  notes.md  test_profile.jl
analysis/: compare_orbits.ipynb  compare_profiles.ipynb  compare_stars.ipynb  compare_stars_3d.ipynb  compare_stars_3d_isolation.ipynb  iso_stars_3d.ipynb  orbit_dm_profiles.ipynb  orbit_stars_2d.ipynb  orbit_stars_density_final.ipynb  stars_3d_orbit.ipynb
bootes3/: absolute_magnitude.jl  artpop_magnitude.ipynb  boo3_luminosity.ipynb  classical_rho_mean.jl  compare_profiles.jl  cored_tidal_tracks.jl  cosmological_means.jl  dark_matter_evolution.jl  density_comparison.jl  density_profiles.jl  emcee_velocity_dispersion.ipynb  engineer_orbit.jl  final_stellar_dist.jl  final_stellar_profiles.jl  initial_halo_selection.jl  mc_orbit_cored.jl  mc_orbit_evolution.jl  model_utils.jl  orbit_selection.jl  print_derived_props.jl  rapha22_tests.jl  rapha_tests.jl  rapha_vs_nbody.jl  tidal_tracks.jl  why_distance_matters.jl
data/: NOTES.md  sha256sums.txt
gadget/: Config.sh  ConfigFMM.sh  ConfigHQ.sh  ConfigMC.sh  ConfigMC_AU.sh  ConfigMW.sh  ConfigMW_AU.sh  ConfigMono.sh  ConfigPM.sh  (+10 more)
(+4800 files in other folders)
