[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lilguys_aeyobd"
version = "0.0.1"
authors = [
    { name="Daniel Boyea", email="dboyea@uvic.ca" },
]
description = "Little Galaxies Under milkY way Stripping"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
